# datamizer

./: LICENSE  README.md  pyproject.toml
datamizer/: __init__.py  datamizer.py  helpers.py
